force-app/main/default/objects/Event_Invitation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Heller Migration 2021.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Event Invitations</relationshipLabel>
    <relationshipName>Event_Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>