force-app/main/default/objects/Event_Invitation__c/fields/Attendees_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Attendees_Remaining__c</fullName>
    <formula>Attendees_Included__c - Attendees_Registered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How many attendees does this Registration have available?</inlineHelpText>
    <label>Attendees Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>