force-app/main/default/objects/Event_Invitation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Heller Migration 2021.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Event Invitations</relationshipLabel>
    <relationshipName>Event_Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>