force-app/main/default/objects/Event_Invitation__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <description>Heller Data Migration 2021.</description>
    <label>Event Date</label>
    <type>Date</type>
</CustomField>