force-app/main/default/objects/Event_Invitation__c/fields/Event_Invitation_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Event_Invitation_Record_ID__c</fullName>
    <description>Heller Data Migration 2021.</description>
    <label>Event Invitation Record ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>