force-app/main/default/objects/Event_Invitation__c/fields/Invited_by__c.field-meta.xml
<CustomField>
    <fullName>Invited_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Heller Data Migration 2021.</description>
    <label>Invited by</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Event Invitations (Invited by)</relationshipLabel>
    <relationshipName>Event_Invitations1</relationshipName>
    <type>Lookup</type>
</CustomField>