force-app/main/default/objects/Event_Invitation__c/fields/LCRM_Invitation_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>LCRM_Invitation_Record_Type__c</fullName>
    <description>Heller Data Migration 2021.</description>
    <label>LCRM Invitation Record Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>