force-app/main/default/objects/Event_Invitation__c/fields/Special_Handling__c.field-meta.xml
<CustomField>
    <fullName>Special_Handling__c</fullName>
    <description>Created as part of Heller Data Migration 2021.</description>
    <label>Special Handling</label>
    <type>TextArea</type>
</CustomField>