force-app/main/default/objects/Event_Invitation__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Heller Data Migration 2021.</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On invite list</fullName>
            </value>
            <value>
                <fullName>On B list invites</fullName>
            </value>
            <value>
                <fullName>On C list invites</fullName>
            </value>
            <value>
                <fullName>Wait list</fullName>
            </value>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Canceled by Constituent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>