force-app/main/default/objects/Event_Invitation__c/recordTypes/Attendee.recordType-meta.xml
<RecordType>
    <fullName>Attendee</fullName>
    <active>true</active>
    <label>Attendee</label>
</RecordType>