force-app/main/default/objects/Event_Invitation__c/recordTypes/Golf_Event_Attendee.recordType-meta.xml
<RecordType>
    <fullName>Golf_Event_Attendee</fullName>
    <active>true</active>
    <description>A person who is attending a golf tournament fundraiser</description>
    <label>Golf Event Attendee</label>
</RecordType>