force-app/main/default/objects/Event_Invitation__c/recordTypes/Invitation.recordType-meta.xml
<RecordType>
    <fullName>Invitation</fullName>
    <active>true</active>
    <label>Invitation</label>
</RecordType>